chore: clean up legacy configuration files
- Remove empty .eslintrc.json and .prettierrc.json from failed attempts
- Remove conflicting tsconfig.json (use tsconfig.electron.json instead)
- Update .gitignore for current build structure (dist-electron/, dist-renderer/, release/, .webpack/)
- Eliminate configuration drift and potential TypeScript conflicts
- Maintain single source of truth for project configuration

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ node_modules/
 # Build output
 dist/
 out/
+dist-electron/
+dist-renderer/
+release/
+.webpack/
 
 # Environment variables (Defense-in-depth)
 .env
