chore: Complete migration to pnpm and remove npm artifacts
- Add pnpm-lock.yaml as the authoritative package lock file
- Remove package-lock.json from version control
- Update .gitignore to prevent npm/yarn lock files from being committed
- Establish pnpm as the exclusive package manager with engines requirement
- Complete transition to stricter dependency management

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Dependencies
 node_modules/
 
+# Package manager lock files (only pnpm-lock.yaml should be committed)
+package-lock.json
+yarn.lock
+
 # Build output
 dist/
 out/
