fix: Complete pnpm migration consistency across all scripts
- Update all package.json scripts to use pnpm instead of npm
- Fix GitHub Actions workflow to use pnpm with proper setup
- Add pnpm/action-setup@v4 for automated builds
- Use --frozen-lockfile for reliable CI/CD installs
- Ensure complete consistency with pnpm-first architecture

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "",
   "main": "dist-electron/main/main.js",
   "scripts": {
-    "start": "npm run electron:dev",
+    "start": "pnpm run electron:dev",
     "dev": "vite",
     "build:renderer": "vite build",
     "build:main": "tsc --project tsconfig.electron.json",
     "build:preload": "tsc --project tsconfig.electron.json",
-    "build": "npm run build:renderer && npm run build:main && npm run build:preload",
-    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron dist-electron/main/main.js\"",
-    "electron:build": "npm run build && electron-builder",
-    "build:mac": "npm run build && electron-builder --mac",
-    "build:win": "npm run build && electron-builder --win",
+    "build": "pnpm run build:renderer && pnpm run build:main && pnpm run build:preload",
+    "electron:dev": "concurrently \"pnpm run dev\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron dist-electron/main/main.js\"",
+    "electron:build": "pnpm run build && electron-builder",
+    "build:mac": "pnpm run build && electron-builder --mac",
+    "build:win": "pnpm run build && electron-builder --win",
     "test": "jest"
   },
   "keywords": [],
