--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,16 +27,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
+          cache: 'pnpm'
+          
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
           
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
         
       - name: Run tests
-        run: npm test
+        run: pnpm test
         
       - name: Build application
-        run: npm run build:${{ matrix.platform }}
+        run: pnpm run build:${{ matrix.platform }}
         
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
